done markup for header and footer

--- a/fragments/base.html
+++ b/fragments/base.html
@@ -1,24 +1,29 @@
 
-<div id="nav-menu" class="hidden">
-    <a href="../site/index.html">Main</a>
-    <a href="../site/form.html">Form</a>
-    <a href="../site/gallery.html">Gallery</a>
-</div>
 
-<div id="site-header">
-    <span class="title">WEB Lab 2</span>
-    <div class="button">Menu</div>
+
+<div id="site-header" class="header-footer">
+    <div class="title">WEB Lab 2</div>
+    <div id="nav-menu" class="dropdown">
+        <div class="btn dropdown-toggle" data-toggle="dropdown">
+            Menu
+        </div>
+        <ul class="dropdown-menu">
+            <li><a href="../site/index.html">Main</a></li>
+            <li><a href="../site/form.html">Form</a></li>
+            <li><a href="../site/gallery.html">Gallery</a></li>
+        </ul>
+    </div>
 </div>
 
 <div id="site-content"></div>
 
-<div id="site-footer">
-    <div>
-        <a href="../site/index.html">Main</a>
-        <a href="../site/form.html">Form</a>
-        <a href="../site/gallery.html">Gallery</a>
+<div id="site-footer" class="header-footer">
+    <div class="pull-left">
+        <a class="btn-sm navlink" href="../site/index.html">Main</a>
+        <a class="btn-sm navlink" href="../site/form.html">Form</a>
+        <a class="btn-sm navlink" href="../site/gallery.html">Gallery</a>
     </div>
-    <div class="right">
+    <div class="pull-right">
         Yaroslav Protsenko, CS-A2
     </div>
 </div>
