--- a/fragments/gallery.html
+++ b/fragments/gallery.html
@@ -1,1 +1,27 @@
-gallery
+<div id="gallery" class="carousel slide">
+
+    <ol class="carousel-indicators">
+        <li data-target="#gallery" data-slide-to="0" class="active"></li>
+        <li data-target="#gallery" data-slide-to="1"></li>
+        <li data-target="#gallery" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="https://www.uralweb.ru/p/uw/pages/2(80).jpg" alt="Slide 1">
+        </div>
+
+        <div class="item">
+            <img src="http://tong.visitkorea.or.kr/rus/cms/content/83/1955183_1_29.jpg" alt="Slide 2">
+        </div>
+
+        <div class="item">
+            <img src="https://i.onthe.io/pogudx1b6dulaimmeg.7ce323b2.jpg" alt="Slide 3">
+        </div>
+    </div>
+
+    <!-- Carousel nav -->
+    <a class="carousel-control left" href="#gallery" data-slide="prev">&lsaquo;</a>
+    <a class="carousel-control right" href="#gallery" data-slide="next">&rsaquo;</a>
+
+</div> 
