--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 }
 
 #site-header .title {
@@ -48,4 +49,20 @@
 #nav-menu .dropdown-menu {
     position: relative;
     float: right;
+}
+
+
+#main-page h1 {
+    text-align: center;
+}
+
+.error {
+    line-height: 1;
+    padding: 6px;
+    margin-top: -16px;
+    color: red;
+}
+
+#gallery .item img {
+    margin: auto;
 }
